SYCATEST: fixed text alignment

--- a/sycatest/style_2.css
+++ b/sycatest/style_2.css
@@ -314,7 +314,7 @@ margin:0px;
     /* line-height: 30px; */
   }
   .text,
-  .text-bold,{
+  .text-bold{
     font-size:22px;
     text-align:center;
   }
